# iep

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
iep/: __init__.py  _eprtr.py  _lcp.py  config.py  eprtr.py  identifiers.py  io.py  misc.py  ownership.py  tables.py  utils.py  versions.py
iep/_input/: deduplication_lcpmapping.csv  ipcc2006_table_2_2.csv  links_lcp.csv  links_lcp_facility.csv  links_lcp_part.csv
iep/_input/iep/: README.md
iep/facility/: __init__.py  deduplication.csv  details.py  facility.py  function.py  links-eprtr.csv  pollutant_release.py  waste_transfers.py
iep/installation/: __init__.py  activity.py  batconclusions.py  batderogations.py  details.py  installation.py  otherchapters.py  permit.py  stricterpermit.py
iep/part/: __init__.py  derogations.py  desulphurisation.py  details.py  emissions.py  energy_input.py  energyinput.py  part.py
input/eprtr/E-PRTR_database_v18/: POLLUTANTRELEASEANDTRANSFERREPORT.parquet  UPLOADEDREPORTS.parquet
input/iep/1215_Public_Product_Full Access_template_v16_public/: 0a_DataCollectionMetadata_EUReg.parquet  2a_ProductionFacilityDetails.parquet
input/iep/1215_Public_Product_Full Access_v8/: 2c_Function.parquet
scripts/: compare_raw_and_sanitised.py  deduplicate_facilities.py  deduplicate_identifiers.py  deduplicate_lcpmapping.py  extract_accessdb.py  get_data.py  historical.py  link_iep_eprtr.py  link_lcp.py  link_lcp_facility.py  link_lcp_part.py
tests/: test_deduplication.py  test_energy_inputs.py  test_links.py  test_pollutant_releases.py
tests/unit/: test_sql_balance.py
(+54 files in other folders)
