[project]
name = "iep"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.5.1",
]

[build-system]
requires = ["uv_build>=0.11.15,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[dependency-groups]
development = [
    "jupyter-console>=6.6.3",
    "pytest>=9.0.3",
    "splink>=4.0.16",
]
